--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel='stylesheet' type='css' href='styles.css'>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   </head>
   <body>
     <div class="scoreboard">
@@ -10,7 +11,10 @@
       <div class="current">Current score: <span>0</span></div>
       <div class="collisions">Collisions: <span>0</span></div>
     </div>
+    <svg class="gameboard">
+    </svg>
     <script src="lib/d3.js" charset="utf-8"></script>
+
     <script src='watchout.js'></script>
   </body>
 </html>
