--- a/client/gravity.html
+++ b/client/gravity.html
@@ -11,6 +11,7 @@
       <div class="current">Current score: <span>0</span></div>
       <div class="collisions">Collisions: <span>0</span></div>
       <button name="start" class="start">Start</button>
+      <button name="reset" class="reset">Reset</button>
     </div>
     <svg class="gameboard">
     </svg>
