Replace "You win!" alert with text field that fades out when reset

--- a/client/gravity.html
+++ b/client/gravity.html
@@ -14,6 +14,7 @@
       <button name="reset" class="reset">Reset</button>
     </div>
     <svg class="gameboard">
+      <text class="win">You win!</text>
     </svg>
     <script src="lib/d3.js" charset="utf-8"></script>
 
